@startuml

hide circle
skinparam classAttributeIconSize 0

class InterfazGrafica {
    +{static} TECLA_ARRIBA:int
    +{static} TECLA_IZQUIERDA:int
    +{static} TECLA_DERECHA:int
    +{static} TECLA_R:int
    +leeTeclaPulsada():int
    +colocaImagen(archivo:String, fila:int, col:int)
}

class ControlJuego {
    -nivelActual:int
    +redibujaNivelActual()
    +partida()
    +cargaNiveles()
}

class Nivel {
    -datosMap:char[][]
    +inicializar()
    +getCelda(f:int, c:int):Celda
    +mueveCabeza()
}

class Celda {
    -tipo:char
    -fila:int
    -columna:int
    +intentaPasar(df:int, dc:int):int
    +getImagen():String
    +isVacia():boolean
    +setTipo(tipo:char)
    +empujar(f:int,c:int):int
}

class Cabeza {
    -fila:int
    -columna:int
    -altura:int
    +getFila():int
    +getColumna():int
    +isLimiteAltura():boolean
    +actualizaPosicion(df:int, dc:int)
}

note as N1
    contiene un array
    de arrays bidimensionales
    (es decir, un array de 3 dimensiones)
    con los datos de cada nivel
end note

class DatosNiveles {
    +{static} MAPAS char[][][]
}

N1 .right. DatosNiveles
ControlJuego .up.> DatosNiveles
ControlJuego -left-> InterfazGrafica : gui
ControlJuego -down-> "1..*" Nivel : niveles

Nivel <-left-> Cabeza

Celda --> Nivel
Nivel *--> "15x19" Celda

@enduml